--- a/Labs/Lab.4/Lab.4.ipynb
+++ b/Labs/Lab.4/Lab.4.ipynb
@@ -10,6 +10,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ewere Alizomor\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Ewere Alizomor\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -290,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
