--- a/Labs/Lab.5/Lab.5.ipynb
+++ b/Labs/Lab.5/Lab.5.ipynb
@@ -8,6 +8,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Practice\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Practice\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -118,7 +135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
